[package]
name = "coreutils-nproc"
version = "0.1.0"
authors = ["Ayrat Kaspranov (tramulns) <user@tramulns.com>"]
edition = "2018"
keywords = ["coreutils"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
libc = "0.2.90"

[[bin]]
name = "nproc"
path = "src/main.rs"

